Completed the Our Features section.

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -20,3 +20,7 @@
 @import "modules/_row";
 
 @import "modules/_generic-content-container";
+
+@import "modules/_section-title";
+
+@import "modules/_feature-item";
