--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,7 +1,5 @@
 .wrapper {
 	overflow: hidden;
-	padding-left: 18px;
-	padding-right: 18px;
 	max-width: 1236px;
 	margin-right: auto;
 	margin-left: auto;
@@ -9,6 +7,26 @@
 	&--medium {
 		max-width: 976px;
 	} 
+	
+	&--no-wrapper-until-medium {
+		padding-left: 0;
+		padding-right: 0;
+		
+		@mixin atMedium {
+			padding-left: 18px;
+			padding-right: 18px;
+		}
+	}
+	
+	&--no-wrapper-until-large {
+		padding-left: 0;
+		padding-right: 0;
+		
+		@mixin atLarge {
+			padding-left: 18px;
+			padding-right: 18px;
+		}
+	}
 	
 	.wrapper {
 		padding-left: 0;
