Completed desktop and mobile header styles.

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -30,3 +30,7 @@
 @import "modules/_sprite";
 
 @import "modules/_site-footer";
+
+@import "modules/_site-header";
+
+@import "modules/_primary-nav";
