--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -36,3 +36,7 @@
 @import "modules/_primary-nav";
 
 @import "modules/_reveal-item";
+
+@import "modules/_modal";
+
+@import "modules/_social-icons";
